--- a/.eslintrc
+++ b/.eslintrc
@@ -8,16 +8,14 @@
     "prettier/flowtype",
     "prettier/react"
   ],
-  "plugins": [
-    "react",
-    "flowtype",
-  ],
+  "plugins": ["react", "flowtype"],
   "globals": {
     "log": true,
     "expect": true,
     "jest": true,
     "__DEV__": true,
-    "__CLIENT__": true
+    "__CLIENT__": true,
+    "Maze": any
   },
   "rules": {
     "react/prop-types": 2,
